# lintspec

./: .env.example  .gitignore  .lintspec.toml  .nsignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  action.yml  cliff.toml  deny.toml  dist-workspace.toml  flake.nix  profile.json  release-plz.toml  test.txt
.cargo/: config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐛-bug-report.md
.github/workflows/: benches.yml  main.yml  mirror.yml  publish-dryrun.yml  release-plz.yml  release.yml  semver-checks.yml
.wake/extension/: local-local-chain-bfcb0369-67e3-477b-8fa5-6d89059ae134.json
benches/: lint.rs  parser.rs  solar.rs
crates/lintspec/: CHANGELOG.md  Cargo.toml
crates/lintspec-core/: CHANGELOG.md  Cargo.toml  README.md
crates/lintspec-core/benches/: lint.rs  parser.rs
crates/lintspec-core/src/: config.rs  definitions.rs  error.rs  files.rs  interner.rs  lib.rs  lint.rs  natspec.rs  parser.rs  textindex.rs  utils.rs
crates/lintspec-core/src/definitions/: constructor.rs  contract.rs  enumeration.rs  error.rs  event.rs  function.rs  interface.rs  library.rs  modifier.rs  structure.rs  variable.rs
crates/lintspec-core/src/parser/: slang.rs  solar.rs
crates/lintspec-core/test-data/: BasicSample.sol  InterfaceSample.sol  LibrarySample.sol  UnicodeSample.sol
crates/lintspec-core/tests/: common.rs  tests-basic-sample.rs  tests-fuzzers.rs  tests-interface-sample.rs  tests-library-sample.rs  tests-parser-test.rs  tests-slang.rs  tests-unicode-sample.rs
crates/lintspec-core/tests/snapshots/: tests_basic_sample__contract.snap  tests_library_sample__library_1.snap  tests_parser_test__basic.snap  tests_unicode_sample__unicode.snap
crates/lintspec-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/lintspec-macros/src/: lib.rs
crates/lintspec-macros/tests/: tests-as_to_variant.rs
crates/lintspec/benches/: e2e.rs  lint.rs  parser.rs
crates/lintspec/src/: cli.rs  config.rs  definitions.rs  error.rs  files.rs  lib.rs  lint.rs  main.rs  natspec.rs  parser.rs  prelude.rs  textindex.rs  utils.rs
crates/lintspec/src/definitions/: constructor.rs  contract.rs  enumeration.rs  error.rs  event.rs  function.rs  interface.rs  library.rs  modifier.rs  structure.rs  variable.rs
crates/lintspec/src/parser/: slang.rs  solar.rs
crates/lintspec/tests/: common.rs  tests-basic-sample.rs  tests-fuzzers.rs  tests-interface-sample.rs  tests-library-sample.rs  tests-parser-test.rs  tests-slang.rs  tests-unicode-sample.rs
crates/lintspec/tests/snapshots/: tests_basic_sample__all.snap  tests_basic_sample__basic.snap  tests_basic_sample__constructor.snap  tests_basic_sample__enum.snap  tests_parser_test__contract.snap  tests_parser_test__struct.snap  tests_unicode_sample__unicode.snap
src/: cli.rs  comment.rs  config.rs  definitions.rs  error.rs  files.rs  lib.rs  lint.rs  main.rs  natspec.rs  parser.rs  utils.rs  validate.rs
src/definitions/: constructor.rs  enumeration.rs  error.rs  event.rs  function.rs  library.rs  mod.rs  modifier.rs  structure.rs  variable.rs
src/parser/: mod.rs  slang.rs  solar.rs
test-data/: BasicSample.sol  Fuzzers.sol  InterfaceSample.sol  ParserTest.sol
tests/: common.rs  tests-basic-sample.rs  tests-fuzzers.rs  tests-interface-sample.rs  tests-library-sample.rs  tests-parser-test.rs  tests-snapshot.rs  tests-solar.rs
tests/snapshots/: tests_basic_sample__all.snap  tests_basic_sample__all_no_inheritdoc.snap  tests_basic_sample__basic.snap  tests_basic_sample__basic_sample_enum.snap  tests_basic_sample__constructor.snap  tests_basic_sample__constructor.snap.new  tests_basic_sample__enum.snap  tests_basic_sample__enum.snap.new  tests_basic_sample__inheritdoc.snap  tests_basic_sample__inheritdoc.snap.new  tests_basic_sample__struct.snap  tests_basic_sample__struct.snap.new  tests_fuzzers__fuzzers.snap  tests_interface_sample__interface.snap  tests_library_sample__basic.snap  tests_library_sample__basic.snap.new  tests_library_sample__library.snap  tests_parser_sample__basic.snap.new  tests_parser_sample__inheritdoc.snap.new  tests_parser_sample__struct.snap.new  tests_parser_test__basic.snap  tests_parser_test__basic.snap.new  tests_parser_test__constructor.snap  tests_parser_test__constructor.snap.new  tests_parser_test__enum.snap  tests_parser_test__enum.snap.new  tests_parser_test__inheritdoc.snap  tests_parser_test__inheritdoc.snap.new  tests_parser_test__struct.snap  tests_parser_test__struct.snap.new  tests_snapshot__basic_sample.snap  tests_snapshot__basic_sample_constructor.snap  tests_snapshot__basic_sample_enum.snap  tests_snapshot__basic_sample_inheritdoc.snap  tests_snapshot__basic_sample_no_constructor.snap  tests_snapshot__basic_sample_struct.snap
