[package]
authors = ["Valentin Bersier <hi@beeb.li>"]
categories = ["development-tools", "command-line-utilities"]
description = "A blazingly fast linter for NatSpec comments in Solidity code"
edition = "2024"
keywords = ["natspec", "solidity", "linter", "checker", "documentation"]
license = "MIT OR Apache-2.0"
name = "lintspec"
readme = "./README.md"
repository = "https://github.com/beeb/lintspec"
rust-version = "1.88.0"
version = "0.8.0"

[lints.clippy]
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
result_large_err = "allow"
pedantic = { level = "warn", priority = -1 }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1.0.95", optional = true }
bon = "3.3.2"
clap = { version = "4.5.29", features = ["derive"], optional = true }
clap_complete = { version = "4.5.57", optional = true }
derive_more = { version = "2.0.1", features = [
    "add",
    "display",
    "from",
    "is_variant",
    "try_into",
] }
dotenvy = { version = "0.15.7", optional = true }
dunce = "1.0.5"
figment = { version = "0.10.19", features = ["env", "toml"] }
ignore = "0.4.23"
itertools = "0.14.0"
miette = { version = "7.5.0", features = ["fancy"], optional = true }
rayon = { version = "1.10.0", optional = true }
regex = { version = "1.11.1", optional = true }
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.12.0"
slang_solidity = { version = "0.18.3", optional = true }
solar-parse = { version = "0.1.4", default-features = false, optional = true }
thiserror = "2.0.11"
toml = "0.9.2"
uuid = { version = "1.18.1", features = ["v4"] }
winnow = "0.7.2"

[dev-dependencies]
divan = { version = "3.0.2", package = "codspeed-divan-compat" }
insta = "1.42.1"
similar-asserts = "1.6.1"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "lint"
harness = false

[features]
default = ["cli", "slang"]
cli = [
    "dep:anyhow",
    "dep:clap",
    "dep:clap_complete",
    "dep:dotenvy",
    "dep:miette",
    "dep:rayon",
]
slang = ["dep:regex", "dep:slang_solidity"]
solar = ["dep:solar-parse"]

[profile.release]
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev.package]
insta.opt-level = 3
