[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Valentin Bersier <hi@beeb.li>"]
categories = ["development-tools", "command-line-utilities"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/beeb/lintspec"
rust-version = "1.89.0"

[workspace.lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
mod_module_files = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev.package]
insta.opt-level = 3
