[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.94.1"
readme = "./README.md"
repository = "https://github.com/beeb/lintspec"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools"]

[workspace.lints.clippy]
allow_attributes = "warn"
expect_used = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
mod_module_files = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.dev.package]
insta.opt-level = 3

[profile.release]
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
