[package]
name = "lintspec-core"
version = "0.13.0"
description = "Core library for lintspec"
readme = "./README.md"
keywords = ["natspec", "solidity", "linter", "documentation"]
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["solar"]
clap = ["dep:clap"]
solar = ["dep:solar-parse"]
slang = ["dep:regex", "dep:slang_solidity"]

[dependencies]
bon = "3.3.2"
clap = { version = "4.5.29", features = ["derive"], optional = true }
derive_more = { version = "2.0.1", features = [
    "add",
    "display",
    "from",
    "from_str",
    "is_variant",
    "try_into",
] }
dunce = "1.0.5"
fastrand = "2.3.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
ignore = "0.4.24"
inturn = "0.1.2"
lintspec-macros = { path = "../lintspec-macros", version = "0.2.2" }
regex = { version = "1.11.1", optional = true }
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
slang_solidity = { version = "1.3.0", optional = true }
solar-parse = { version = "0.1.4", default-features = false, optional = true }
thiserror = "2.0.11"
wide = "1.1.1"
winnow = "0.7.2"
zerocopy = "0.8.27"

[dev-dependencies]
divan = { version = "4.0.5", package = "codspeed-divan-compat" }
insta = "1.42.1"
miette = { version = "7.5.0", features = ["fancy"] }
similar-asserts = "1.6.1"
temp-dir = "0.2.0"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "lint"
harness = false
