[package]
name = "lintspec-core"
version = "0.16.0"
edition.workspace = true
rust-version.workspace = true
description = "Core library for lintspec"
readme = "./README.md"
repository.workspace = true
license.workspace = true
keywords = ["documentation", "linter", "natspec", "solidity"]
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
harness = false
name = "parser"

[[bench]]
harness = false
name = "lint"

[dependencies]
bon = "3.3.2"
clap = { version = "4.5.29", features = ["derive"], optional = true }
derive_more = { version = "2.0.1", features = [
  "add",
  "display",
  "from",
  "from_str",
  "is_variant",
  "try_into",
] }
dunce = "1.0.5"
fastrand = "2.3.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
ignore = "0.4.24"
inturn = "0.1.2"
lintspec-macros = { path = "../lintspec-macros", version = "0.2.4" }
regex = { version = "1.11.1", optional = true }
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
slang_solidity = { version = "1.3.0", optional = true }
solar-parse = { version = "0.1.4", default-features = false, optional = true }
thiserror = "2.0.11"
thiserror-ext = "0.3.0"
wide = "1.1.1"
winnow = { version = "1.0.2", default-features = false, features = [
  "ascii",
  "std"
] }
zerocopy = "0.8.27"

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "4.0.5" }
insta = "1.42.1"
miette = { version = "7.5.0", features = ["fancy"] }
similar-asserts = "2.0.0"
temp-dir = "0.2.0"

[features]
default = ["solar"]
clap = ["dep:clap"]
slang = ["dep:regex", "dep:slang_solidity"]
solar = ["dep:solar-parse"]

[lints]
workspace = true
