[package]
name = "lintspec"
version = "0.11.2"
description = "A blazingly fast linter for NatSpec comments in Solidity code"
keywords = ["natspec", "solidity", "linter", "checker", "documentation"]
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bon = "3.3.2"
clap = { version = "4.5.29", features = ["derive"], optional = true }
clap_complete = { version = "4.5.57", optional = true }
derive_more = { version = "2.0.1", features = [
    "add",
    "display",
    "from",
    "is_variant",
    "try_into",
] }
dotenvy = { version = "0.15.7", optional = true }
dunce = "1.0.5"
figment = { version = "0.10.19", features = ["env", "toml"] }
ignore = "0.4.24"
lintspec-macros = { path = "../lintspec-macros", version = "0.2.0" }
miette = { version = "7.5.0", features = ["fancy"], optional = true }
rayon = { version = "1.10.0", optional = true }
regex = { version = "1.11.1", optional = true }
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
slang_solidity = { version = "0.18.3", optional = true }
solar-parse = { version = "0.1.4", default-features = false, optional = true }
thiserror = "2.0.11"
toml = "0.9.2"
uuid = { version = "1.18.1", features = ["v4"] }
wide = "0.8.1"
winnow = "0.7.2"

[dev-dependencies]
divan = { version = "3.0.2", package = "codspeed-divan-compat" }
insta = "1.42.1"
similar-asserts = "1.6.1"
temp-dir = "0.1.16"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "lint"
harness = false

[[bench]]
name = "e2e"
harness = false

[features]
default = ["cli", "solar"]
cli = [
    "dep:clap",
    "dep:clap_complete",
    "dep:dotenvy",
    "dep:miette",
    "dep:rayon",
]
solar = ["dep:solar-parse"]
slang = ["dep:regex", "dep:slang_solidity"]
