[package]
name = "lintspec"
version = "0.12.2"
description = "A blazingly fast linter for NatSpec comments in Solidity code"
keywords = ["natspec", "solidity", "linter", "checker", "documentation"]
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["solar"]
solar = ["lintspec-core/solar"]
slang = ["lintspec-core/slang"]

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
clap_complete = "4.5.57"
dotenvy = "0.15.7"
dunce = "1.0.5"
figment = { version = "0.10.19", features = ["env", "toml"] }
lintspec-core = { path = "../lintspec-core", version = "0.12.2", default-features = false }
miette = { version = "7.5.0", features = ["fancy"] }
rayon = "1.10.0"
serde_json = "1.0.138"
toml = "0.9.2"

[dev-dependencies]
divan = { version = "4.0.5", package = "codspeed-divan-compat" }
temp-dir = "0.2.0"

[[bench]]
name = "e2e"
harness = false
