[package]
name = "lintspec"
version = "0.17.0"
edition.workspace = true
rust-version.workspace = true
description = "A blazingly fast linter for NatSpec comments in Solidity code"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["checker", "documentation", "linter", "natspec", "solidity"]
categories.workspace = true

[[bench]]
harness = false
name = "e2e"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
clap_complete = "4.5.57"
dotenvy = "0.15.7"
dunce = "1.0.5"
figment = { version = "0.10.19", features = ["env", "toml"] }
lintspec-core = { path = "../lintspec-core", version = "0.17.0", default-features = false, features = [
  "clap",
] }
miette = { version = "7.5.0", features = ["fancy"] }
rayon = "1.10.0"
serde_json = "1.0.138"
toml = "1.0.6"

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "4.0.5" }
temp-dir = "0.2.0"

[features]
default = ["solar"]
slang = ["lintspec-core/slang"]
solar = ["lintspec-core/solar"]

[lints]
workspace = true
